# pico-usb-mass-storage

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml
dumps/: linux_nonpartioned.dump  linux_nonpartioned.dump.txt  linux_partioned.dump.txt  linux_partitioned.dump
src/: lib.rs  main.rs  storage.rs
src/blinky/: mod.rs
src/bulk_only_transport/: cbw.rs  csw.rs  mod.rs
src/fat12_partition/: mod.rs  setup.rs
src/screen/: human_bytes.rs  mod.rs  ssd1306.rs
src/scsi/: block_device.rs  command.rs  error.rs  mod.rs  packing.rs
src/scsi/commands/: command.rs  command_length.rs  control.rs  format.rs  inquiry.rs  mod.rs  mode_parameter.rs  mode_select.rs  mode_sense.rs  prevent_allow_medium_removal.rs  read.rs  read_capacity.rs  read_format_capacities.rs  report_luns.rs  request_sense.rs  send_diagnostic.rs  start_stop_unit.rs  synchronize_cache.rs  test_unit_ready.rs  verify.rs  write.rs
src/scsi/enums/: additional_sense_code.rs  medium_type.rs  mod.rs  op_code.rs  page_control.rs  peripheral_device_type.rs  peripheral_qualifier.rs  response_code.rs  response_data_format.rs  sense_key.rs  spc_version.rs  target_port_group_support.rs  version_descriptor.rs
src/scsi/responses/: inquiry.rs  mod.rs  read_capacity.rs  request_sense.rs
src/server/: echo.rs  mod.rs  okay.rs
src/usb_mass_storage/: endpoints.rs  mod.rs
src/usbd_storage/: buffer.rs  mod.rs
src/usbd_storage/subclass/: mod.rs  scsi.rs  ufi.rs
src/usbd_storage/transport/: bbb.rs  mod.rs
src/wifi/: blinky.rs  mod.rs  scan.rs  server.rs
